@@ -1,5 +1,11 @@
 2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02875] rendering a table with inconsistent colspan,rowspan
+	* table.c (feed_table_tag): don't clear HTT_X|HTT_Y 
+		instead, if set these flags, break the loop
+
+2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02909] wrong table width calculation (sf.net Bug#506949)
 	* table.c (correct_table_matrix4): added
 	* table.c (set_table_matrix0): use correct_table_matrix4()
@@ -2297,4 +2303,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.262 2002/01/25 15:10:14 ukai Exp $
+$Id: ChangeLog,v 1.263 2002/01/25 15:20:34 ukai Exp $
